created the fundermental environment

--- a/Gmap/res/values/strings.xml
+++ b/Gmap/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Gmap</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="billing">http://www.jiaozuoye.com/joj/upload/download/1961</string>
 
 </resources>
