--- a/Gmap/res/values/strings.xml
+++ b/Gmap/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Gmap</string>
+    <string name="app_name">Innovate 2010</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="billing">http://www.jiaozuoye.com/joj/upload/download/1961</string>
+    <string name="bling">http://www.jiaozuoye.com/joj/upload/download/1961</string>
 
 </resources>
